.allforai/product-concept/test-output-20260301-074850/challenger-output.txt
[eval]:6
    '  📦 使用 LLM 缓存 (3/1/2026 生成)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Expected ',', got 'qwen'

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v25.6.0
